# CodeMorph

./: .gitignore  README.md  pyproject.toml
.github/instructions/: commit.instructions.md  copilot.instructions.md
demo/: config.toml
demo/artifacts/: PLSQL_Demo_CodeObjects.db
demo/artifacts/graphs/: dep-graph.graphml
demo/artifacts/visualizations/: dep-graph
demo/dummy_plsql_source/schema_app_core/functions/: is_employee_active.sql
demo/dummy_plsql_source/schema_app_core/procedures/: archive_old_projects.sql  old_unused_procedure.sql
demo/dummy_plsql_source/schema_app_finance/procedures/: trigger_nightly_payroll_run.sql
planning/gitingest/: digest-20250517-f9fbb5d1827e6387b2840a4fc7a6f82e76c6431a.txt
planning/raw-gemini-sessions/: aistudio-gemini-2.5-pro-05-06-20250517-branch.md  aistudio-gemini-2.5-pro-05-06-20250517.md
planning/roadmaps/: dependency_analyzer - Advance Graph Analysis.md  dependency_analyzer - FastAPI Roadmap.md
src/codemorph/: __init__.py
