[project]
name = "codemorph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Hrushikesh", email = "hrushikesh.pawar@evernorth.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dependency-analyzer",
    "plsql-analyzer",
    "pytest-xdist[psutil]>=3.6.1",
]

[project.scripts]
codemorph = "codemorph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "packages/plsql_analyzer",
    "packages/dependency_analyzer",
]

[tool.uv.sources]
plsql-analyzer = { workspace = true }
dependency-analyzer = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist[psutil]>=3.6.1",
    "snakeviz>=2.2.2",
]
